--- a/gamepages/level1.html
+++ b/gamepages/level1.html
@@ -27,16 +27,17 @@
 
     <div class="container scores">
         <div class="row text-center">
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
             <div class="col-md-3 userSection">
                 <h3>Your Score</h3>
                 <h1 id="userScore"></h1>
             </div>
+            <div class="col-md-2"></div>
             <div class="col-md-3 deathSection">
-                <h3># of Deaths</h3>
+                <h3>Click on films that have # of deaths</h3>
                 <h1 id="numDeaths"></h1>
             </div>
-            <div class="col-md-3"></div>
+            <div class="col-md-2"></div>
         </div>
     </div>
 
