--- a/gamepages/level2.html
+++ b/gamepages/level2.html
@@ -14,13 +14,42 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./gamecode/l2style.css">
+    <!-- jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="./gamecode/l1style.css">
 </head>
 
 <body>
 
-    <h1 id="l2title">LEVEL 2</h1>
-    <p id="l2subtitle">DEATH COUNTS BETWEEN 100 AND 1000! </p>
+    <h1 id="l1title">LEVEL 2</h1>
+    <p id="l1subtitle">DEATH COUNTS BETWEEN 50 AND 2000! </p>
+
+    <div class="container scores">
+        <div class="row text-center">
+            <div class="col-md-2"></div>
+            <div class="col-md-3 userSection">
+                <h3>Your Score</h3>
+                <h1 id="userScore"></h1>
+            </div>
+            <div class="col-md-2"></div>
+            <div class="col-md-3 deathSection">
+                <h3>Click on films that have # of deaths</h3>
+                <h1 id="numDeaths"></h1>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+    </div>
+
+
+
+    <div class="container">
+        <div class="row text-center">
+            <!-- <div class="col-md-1"></div> -->
+            <div class="col-md-12" id="filmButtons"></div>
+            <!-- <div class="col-md-1"></div> -->
+        </div>
+    </div>
 
     <div class="chart"></div>
 
@@ -33,7 +62,6 @@
             <div class="col col-md-3"></div>
         </div> <!-- end gameButtons row -->
     </div> <!-- end buttonsContainer  -->
-
 
 
 
